--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <meta name="msapplication-TileColor" content="#00aba9">
   <script>
     window.MathJax = {
+      loader: {load: ['[tex]/cases']},
       tex: {
+        packages: {'[+]': ['cases']},
         inlineMath: [['$', '$'], ['\\(', '\\)']],
+        autoload: {
+      cases: [[], ['numcases', 'subnumcases']]
+    }
       },
     }
   </script>
